<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_background"
    tools:context=".ui.LoginActivity">

   <com.google.android.material.card.MaterialCardView
       android:id="@+id/login_card"
       android:layout_width="match_parent"
       android:layout_height="250dp"
       app:cardElevation="16dp"
       android:layout_marginTop="30dp"
       android:layout_marginStart="10dp"
       app:cardBackgroundColor="#272A33"
       android:layout_marginEnd="10dp"
       app:cardCornerRadius="16dp"
       app:layout_constraintStart_toStartOf="parent"
       app:layout_constraintEnd_toEndOf="parent"
       app:layout_constraintTop_toTopOf="parent">

      <LinearLayout
          android:orientation="vertical"
          android:layout_width="match_parent"
          android:layout_height="match_parent">
         <TextView
             android:id="@+id/tv_user_name"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
             android:text="@string/TVUsername"
             android:textColor="@color/white"
             android:textSize="24sp"
             android:fontFamily="@font/arial"
             android:layout_marginTop="15dp"
             android:clickable="true">
         </TextView>
         <EditText
             android:id="@+id/input_login_password"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="30dp"
             android:hint="@string/password"
             android:maxLines="1"
             android:gravity="center"
             android:layout_marginEnd="10dp"
             android:layout_marginStart="10dp"
             android:textColorHint="@color/green_700"
             android:inputType="textPassword">
         </EditText>
         <com.google.android.material.button.MaterialButton
             android:id="@+id/btn_Submit"
             android:layout_width="200dp"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
             android:layout_marginTop="50dp"
             app:cornerRadius="10dp"
             android:text="@string/login">
         </com.google.android.material.button.MaterialButton>
      </LinearLayout>

   </com.google.android.material.card.MaterialCardView>

   <com.google.android.material.button.MaterialButton
       android:id="@+id/btn_use_finger"
       android:layout_width="300dp"
       android:layout_height="60dp"
       app:layout_constraintStart_toStartOf="@id/login_card"
       app:layout_constraintEnd_toEndOf="@id/login_card"
       app:layout_constraintTop_toBottomOf="@id/login_card"
       android:layout_marginTop="30dp"
       app:cornerRadius="8dp"
       android:textSize="19sp"
       app:layout_constraintBottom_toTopOf="@id/sign_card"
       app:icon="@drawable/ic_baseline_fingerprint_24"
       app:iconSize="50dp"
       android:textStyle="italic"
       android:text="@string/use_your_finger">
   </com.google.android.material.button.MaterialButton>
   <com.google.android.material.card.MaterialCardView
       android:id="@+id/sign_card"
       android:layout_width="match_parent"
       android:layout_height="200dp"
       app:cardElevation="16dp"
       android:layout_marginTop="30dp"
       android:layout_marginStart="10dp"
       app:cardBackgroundColor="#272A33"
       android:layout_marginEnd="10dp"
       app:cardCornerRadius="16dp"
       app:layout_constraintStart_toStartOf="@id/login_card"
       app:layout_constraintEnd_toEndOf="@id/login_card"
       app:layout_constraintBottom_toBottomOf="parent"
       app:layout_constraintTop_toBottomOf="@id/btn_use_finger">

      <LinearLayout
          android:orientation="vertical"
          android:layout_width="match_parent"
          android:layout_height="match_parent">
         <TextView
             android:id="@+id/tv_intro"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
             android:text="@string/introText"
             android:textColor="@color/white"
             android:textSize="20sp"
             android:gravity="center"
             android:fontFamily="@font/arial"
             android:layout_marginTop="15dp"
             android:clickable="true">
         </TextView>

         <com.google.android.material.button.MaterialButton
             android:id="@+id/btn_use_signIn_Dialog"
             android:layout_width="200dp"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
             android:layout_marginTop="30dp"
             app:cornerRadius="10dp"
             android:text="@string/signin">
         </com.google.android.material.button.MaterialButton>
      </LinearLayout>

   </com.google.android.material.card.MaterialCardView>




</androidx.constraintlayout.widget.ConstraintLayout>