<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/Search_Result_Fragment"
    android:fitsSystemWindows="true"
    android:orientation="vertical"
    tools:context=".ui.SearchResultFragment">
    <ImageView
        android:id="@+id/image_category"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:scaleType="fitXY"
        android:src="@drawable/details_image" />
    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <ProgressBar
                android:id="@+id/progressBar"
                style="@style/Base.Widget.AppCompat.ProgressBar.Horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:indeterminate="true"
                android:layout_gravity="bottom"
                />
            <TextView
                android:id="@+id/meal_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="..."
                android:textSize="20sp"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:layout_margin="8dp"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:orientation="horizontal"
                android:layout_height="wrap_content">
                <androidx.cardview.widget.CardView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    app:cardCornerRadius="10dp"
                    app:cardElevation="5dp"
                    app:cardUseCompatPadding="true">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">
                        <TextView
                            android:id="@+id/textCategory"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:paddingLeft="14dp"
                            android:paddingTop="14dp"
                            android:paddingRight="14dp"
                            android:text="Category"
                            android:textColor="@color/black" />

                        <TextView
                            android:id="@+id/category"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:paddingLeft="14dp"
                            android:paddingTop="5dp"
                            android:paddingRight="14dp"
                            android:paddingBottom="14dp"
                            android:text="..."
                            android:textColor="#808080"
                            android:textSize="16sp" />

                    </LinearLayout>
                </androidx.cardview.widget.CardView>
                <androidx.cardview.widget.CardView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    app:cardCornerRadius="10dp"
                    app:cardElevation="5dp"
                    app:cardUseCompatPadding="true">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">
                        <TextView
                            android:id="@+id/Country"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:paddingLeft="14dp"
                            android:paddingTop="14dp"
                            android:paddingRight="14dp"
                            android:text="country"
                            android:textColor="@color/black" />

                        <TextView
                            android:id="@+id/country"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:paddingLeft="14dp"
                            android:paddingTop="5dp"
                            android:paddingRight="14dp"
                            android:paddingBottom="14dp"
                            android:text="..."
                            android:textColor="#808080"
                            android:textSize="16sp" />

                    </LinearLayout>
                </androidx.cardview.widget.CardView>
            </LinearLayout>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                app:drawableEndCompat="@drawable/ic_baseline_info_24"
                android:text="@string/instructions"
                android:textStyle="bold"
                android:textSize="20sp"
                android:gravity="start">
            </TextView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:layout_marginStart="10dp"
                app:cardCornerRadius="10dp"
                app:cardElevation="5sp"
                app:cardUseCompatPadding="true">

                <TextView
                    android:id="@+id/instructions"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="..."
                    android:textSize="16sp"
                    android:paddingStart="14dp"
                    android:paddingEnd="14dp"
                    android:paddingTop="15dp"
                    android:paddingBottom="15dp">
                </TextView>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:layout_marginStart="10dp"
                app:cardCornerRadius="10dp"
                app:cardElevation="5sp"
                app:cardUseCompatPadding="true">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="14dp"
                        android:layout_marginStart="14dp"
                        android:layout_marginEnd="14dp"
                        android:text="@string/ingredients">
                    </TextView>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="20dp"
                    android:orientation="horizontal">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:layout_weight="1">
                        <TextView
                            android:id="@+id/ingredient"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:paddingLeft="14dp"
                            android:paddingRight="14dp"
                            android:text="..."
                            android:textColor="@color/black"
                            android:textSize="16sp" />

                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:layout_weight="1">
                        <TextView
                            android:id="@+id/measure"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:paddingLeft="14dp"
                            android:paddingRight="14dp"
                            android:text="..."
                            android:textColor="@color/black"
                            android:textSize="16sp" />

                    </LinearLayout>
                </LinearLayout>
                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <androidx.cardview.widget.CardView
                    android:id="@+id/youtube_card"
                    android:layout_width="0dp"
                    app:cardUseCompatPadding="true"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    app:cardElevation="5dp"
                    app:cardCornerRadius="10dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="10dp">

                    <TextView

                        android:background="?attr/selectableItemBackground"
                        android:clickable="true"
                        android:focusable="true"
                        android:id="@+id/youtube"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/youtube"
                        android:padding="14dp"
                        android:textSize="16sp"
                        android:textColor="#EC2D2D"
                        android:gravity="center_vertical"
                        android:drawablePadding="10dp"
                        app:drawableStartCompat="@drawable/ic_baseline_play_circle_24" />
                </androidx.cardview.widget.CardView>
                <androidx.cardview.widget.CardView
                    android:id="@+id/Link_card"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    app:cardUseCompatPadding="true"
                    android:layout_height="wrap_content"
                    app:cardElevation="5dp"
                    app:cardCornerRadius="10dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="10dp">

                    <TextView
                        android:background="?attr/selectableItemBackground"
                        android:clickable="true"
                        android:focusable="true"
                        android:id="@+id/links"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="Link"
                        android:padding="14dp"
                        android:textSize="16sp"
                        android:textColor="#4CAF50"
                        android:gravity="center|start"
                        android:drawablePadding="10dp"
                        app:drawableStartCompat="@drawable/ic_baseline_insert_link_24" />
                </androidx.cardview.widget.CardView>
            </LinearLayout>
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
    <Button
        android:id="@+id/btn_check_net"
        android:layout_gravity="center_horizontal"
        android:visibility="invisible"
        android:text="@string/retry_again"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
    </Button>
</LinearLayout>